[project]
name = "telegram-bot"
version = "1.0.0"
description = "Multi-function Telegram bot"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-telegram-bot==20.3",
    "Pillow==10.1.0",
    "requests==2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
